# machamp

./: .gitignore  Cargo.toml  package-lock.json  package.json  tsconfig.json
src/: exec.ts  index.js  index.ts  init.rs  init.ts  main.rs  parser.ts  testpush.ts
src/commands/: aliases.rs  aliases.ts  commands.rs  commands.ts  mod.rs
src/jobs/: mod.rs  ping-blink.ts  ping_blink.rs  redis.job.ts  start.job.ts  update.job.ts
src/system/: aliases.rs  commands.rs  mcommand.rs  mod.rs
