[package]
name = "machamp"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-amqp = "1.0.0"
tokio = { version = "1.13.0", features = ["full"] }
lapin = "1.8.0"
futures-util = "0.3.17"
intervalier = "0.4.0"
timer = "0.2.0"
chrono = "0.2.16"